--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -136,6 +136,7 @@ default:
         - TrashbinContext:
         - WebDavPropertiesContext:
         - OcisConfigContext:
+        - SharingNgContext:
 
     coreApiSharePublicLink2:
       paths:
