update given step using sharingNg in accessToShare.feature

--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -114,6 +114,7 @@ default:
         - TrashbinContext:
         - WebDavPropertiesContext:
         - SettingsContext:
+        - SharingNgContext:
 
     coreApiShareOperationsToShares2:
       paths:
